fixed arrow for external links, now it won't line jump!

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -87,11 +87,13 @@ a {
 a[target="_blank"],
 a[href^="http"] {
 	&:not(.disable-link-arrow)::after {
-		display: inline-block;
-		content: "↗";
+		// display: inline-block;
+		content: "\00a0↗";
 		position: relative;
-		top: -0.2em;
-		padding-left: 0.05em;
+		top: -0.4em;
+		left: -0.2em;
+		// padding-left: 0.05em;
+		font-size: 0.85em;
 		//    font-size: 2em;
 		line-height: 0;
 		text-decoration: none;
